added refresh functionality

--- a/src/App.css
+++ b/src/App.css
@@ -72,6 +72,11 @@ body {
     width: 25px;
     height: 25px;
   }
+
+  .closeButton {
+    width: 25px;
+    height: 25px;
+  }
 }
 
 .notFoundImage {
